--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "restify-formatter-jsonp",
   "version": "0.1.0",
-  "description": "restify-formatter-jsonp =======================",
+  "description": "restify-formatter-jsonp",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha --reporter spec test.js",
+    "cover": "./node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha test.js -- -u exports -R spec"
   },
   "repository": {
     "type": "git",
