--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gergelyke/restify-formatter-jsonp.git"
+    "url": "https://github.com/restify/formatter-jsonp.git"
   },
-  "author": "Gergely Nemeth <mail@nemethgergely.com> (http://twitter.com/nthgergo)",
+  "author": "Gergely Nemeth",
+  "contributors": [
+    "Tamas Kokeny"
+  ],
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/gergelyke/restify-formatter-jsonp/issues"
+    "url": "https://github.com/restify/formatter-jsonp/issues"
   },
-  "homepage": "https://github.com/gergelyke/restify-formatter-jsonp",
+  "homepage": "https://github.com/restify/formatter-jsonp",
   "devDependencies": {
     "mocha": "^1.17.1",
     "chai": "^1.9.0",
